--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,7 @@
 <p>
    <a href="https://github.com/chuong">Chuong Nguyen </a>,
    <a href="https://github.com/dmk1991">David Kreuzburg</a>,
-   Enrico, <a href="https://github.com/iandelible">Ian Pan</a>,
+   <a href="https://github.com/iandelible">Ian Pan</a>,
    <a href="https://github.com/ryank01">Ryan Kawall</a> and
    <a href="https://github.com/jacobwgillespie">Jacob Gillespie</a>.
 </p>
