--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,8 +2,8 @@
 <% @games.each do |game| %>
   <div class="booyah-box col-xs-10 col-xs-offset-1">
     <h2><%= game.name %></h2> <br />
-    <p>White player: <%= white_player_name(game) %></p>
-    <p>Black player: <%= black_player_name(game) %></p>
+    <p>White player: <%= white_player_email(game) %></p>
+    <p>Black player: <%= black_player_email(game) %></p>
     <% if isOpen?(game) %>
       <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
         Join
