--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,12 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#">Link</a></li>
-        </ul>
+          <% if player_signed_in? %>
+            <li><%= link_to 'Sign out', destroy_player_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to 'Sign in', new_player_session_path %></li>
+            <li><%= link_to 'Sign up', new_player_registration_path %></li>
+          <% end %>        </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Link</a></li>
         </ul>
