Add button to landing page and fix links

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -14,3 +14,5 @@
    <a href="https://github.com/ryank01">Ryan Kawall</a> and
    <a href="https://github.com/jacobwgillespie">Jacob Gillespie</a>.
 </p>
+
+<%= button_to "See games", games_path, :class => "button", :method => :get %>
