--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -24,9 +24,9 @@
             <% symbol = '' %>
             <% unless piece.empty? %>
               <% if piece[0].is_black? %>
-                <% symbol = @black_symbols[piece[0].type] %>
+                <% symbol = select_html_symbol(piece[0].type, 'black') %>
               <% else %>
-                <% symbol = @white_symbols[piece[0].type] %>
+                <% symbol = select_html_symbol(piece[0].type, 'white') %>
               <% end %>
             <% end %>
             <%= content_tag(:div, raw(symbol), class: @square_color[(row+col) % 2])%>
