--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -18,14 +18,9 @@
         <% pieces = @game.pieces %>
         <% for j in 1..8 %>
           <% row = 9-j %>
-          <% for  i in 1..8 %>
-            <% col = i %>
+          <% for col in 1..8 %>
             <% piece = pieces.where(column: col, row: row) %>
-            <% symbol = '' %>
-            <% unless piece.empty? %>
-              <% symbol = select_html_symbol(piece[0]) %>
-            <% end %>
-            <%= content_tag(:div, raw(symbol), class: @square_color[(row+col) % 2])%>
+            <%= content_tag(:div, raw(select_html_symbol(piece[0])), class: @square_color[(row+col) % 2])%>
             <%= %>
           <% end %>
         <% end %>
