--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -18,8 +18,15 @@
         <% for j in 1..8 %>
           <% row = 9-j %>
           <% for col in 1..8 %>
-            <% piece = pieces.where(column: col, row: row) %>
-            <%= content_tag(:div, raw(select_html_symbol(piece[0])), class: square_color(row, col)) %>
+            <% pieces2 = pieces.where(column: col, row: row) %>
+            <% piece = pieces2[0] %>
+            <% if piece.blank? %>
+              <%= content_tag(:div, "", class: square_color(row, col)) %>
+            <% else %>
+              <%= link_to piece_path(piece) do %>
+                <%= content_tag(:div, piece.isSelected ? content_tag(:u, raw(select_html_symbol(piece))) : raw(select_html_symbol(piece)), class: square_color(row, col)) %>
+              <% end %>
+            <% end %>
           <% end %>
         <% end %>
       </div>
