--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -15,28 +15,37 @@
 
       <div class="chessboard">
         <% pieces = @game.pieces %>
-        <% a_piece_selected = !pieces.where(is_selected: true).empty? %>
+        <% pieces_selected = pieces.where(is_selected: true) %>
         <% for j in 1..8 %>
           <% row = 9-j %>
           <% for col in 1..8 %>
-            <% pieces2 = pieces.where(column: col, row: row) %>
-            <% piece = pieces2[0] %>
+            <% pieces_in_square = pieces.where(column: col, row: row) %>
+            <% piece_in_square = pieces_in_square[0] %>
 
-            <% if !a_piece_selected %>
-              <% if piece.blank? || (piece.is_black && @game.black_player != current_player) || (!piece.is_black && @game.white_player != current_player) %>
-                <%= content_tag(:div, raw(select_html_symbol(piece)), class: square_color(row, col)) %>
+            <% if pieces_selected.empty? %>
+              <% if piece_in_square.blank? ||
+                 (piece_in_square.is_black && @game.black_player != current_player) ||
+                 (!piece_in_square.is_black && @game.white_player != current_player) %>
+                <%= content_tag(:div, raw(select_html_symbol(piece_in_square)),
+                                class: square_color(row, col)) %>
               <% else %>
-                <%= link_to piece_path(piece) do %>
-                  <%= content_tag(:div, raw(select_html_symbol(piece)), class: square_color(row, col)) %>
+                <%= link_to piece_path(piece_in_square) do %>
+                  <%= content_tag(:div, raw(select_html_symbol(piece_in_square)),
+                                  class: square_color(row, col)) %>
                 <% end %>
               <% end %>
             <% else %>
-              <% is_black = (@game.black_player_id == current_player.id) %>
-              <%= link_to moves_path(is_black: is_black, column: col, row: row, game_id: @game.id), method: :post do %>
-                <% if piece.blank? %>
+              <% piece_selected = pieces_selected[0] %>
+              <%= link_to piece_path(id: piece_selected.id, column: col,
+                    row: row, game_id: @game.id), method: :put do %>
+                <% if piece_in_square.blank? %>
                   <%= content_tag(:div, "", class: square_color(row, col)) %>
                 <% else %>
-                  <%= content_tag(:div, piece.is_selected ? content_tag(:u, raw(select_html_symbol(piece))) : raw(select_html_symbol(piece)), class: square_color(row, col)) %>
+                  <%= content_tag(:div,
+                                  piece_in_square.is_selected ?
+                                    content_tag(:u, raw(select_html_symbol(piece_in_square))) :
+                                    raw(select_html_symbol(piece_in_square)),
+                                  class: square_color(row, col)) %>
                 <% end %>
               <% end %>
 
