--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -15,39 +15,18 @@
 
       <div class="chessboard">
         <% pieces = @game.pieces %>
-        <% pieces_selected = pieces.where(is_selected: true) %>
         <% for j in 1..8 %>
           <% row = 9-j %>
           <% for col in 1..8 %>
             <% pieces_in_square = pieces.where(column: col, row: row) %>
             <% piece_in_square = pieces_in_square[0] %>
 
-            <% if pieces_selected.empty? %>
-              <% if piece_in_square.blank? ||
-                 (piece_in_square.is_black && @game.black_player != current_player) ||
-                 (!piece_in_square.is_black && @game.white_player != current_player) %>
-                <%= content_tag(:div, raw(select_html_symbol(piece_in_square)),
-                                class: square_color(row, col)) %>
-              <% else %>
-                <%= link_to piece_path(piece_in_square) do %>
-                  <%= content_tag(:div, raw(select_html_symbol(piece_in_square)),
-                                  class: square_color(row, col)) %>
-                <% end %>
-              <% end %>
+            <% if piece_in_square.blank? %>
+              <%= content_tag(:div, '', class: square_color(row, col)) %>
             <% else %>
-              <% piece_selected = pieces_selected[0] %>
-              <%= link_to piece_path(id: piece_selected.id, column: col, row: row), method: :put do %>
-              <% if piece_in_square.blank? %>
-                <%= content_tag(:div, "", class: square_color(row, col)) %>
-              <% else %>
-                <%= content_tag(:div,
-                                piece_in_square.is_selected ?
-                                content_tag(:u, raw(select_html_symbol(piece_in_square))) :
-                                raw(select_html_symbol(piece_in_square)),
-                                class: square_color(row, col)) %>
-              <% end %>
-            <% end %>
-
+              <%= content_tag(:div,
+                              content_tag(:div, raw(select_html_symbol(piece_in_square))),
+                              class: square_color(row, col)) %>
             <% end %>
           <% end %>
         <% end %>
@@ -61,3 +40,35 @@
     </div>
   </body>
 </html>
+
+<script>
+$(function() {
+  // set layer position of pieces and hovering cursor shape
+  $('.chessboard>div>div').css({zIndex: 1, cursor: 'move'});
+
+  // make all pieces draggable
+  // the pieces are inside chessboard div and square div
+  $('.chessboard>div>div').draggable();
+
+  // handle the action of dropping a piece into a square
+  $('.chessboard>div').droppable({
+    // FIXME: This function does not check for valid move or valid capture.
+    //        It does not update database.
+    drop: function(event, ui){
+      let piece_div = ui.draggable;
+      let square_div = $(this);
+
+      // check inside of the square, hide and remove any piece to be captured
+      if (square_div.text().length != 0) {
+        square_div.children().hide('slow');
+        square_div.empty();
+      }
+
+      // reset the selected piece position relative to the square before adding
+      piece_div.css({left: 0, top: 0});
+      square_div.append(piece_div);
+    }
+  });
+
+});
+</script>
