--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -5,58 +5,39 @@
   </head>
 
   <body>
-    <div class="col-xs-10 col-xs-offset-1">
-      <div class="left">
-        <% for j in 1..8 %>
-          <% row = 9-j %>
-          <%= content_tag(:div, row.to_s, class: 'row')%>
-        <% end %>
-      </div>
-
-      <div class="chessboard">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <div class="col-xs-10">
         <% pieces = @game.pieces %>
-        <% pieces_selected = pieces.where(is_selected: true) %>
-        <% for j in 1..8 %>
-          <% row = 9-j %>
-          <% for col in 1..8 %>
-            <% pieces_in_square = pieces.where(column: col, row: row) %>
-            <% piece_in_square = pieces_in_square[0] %>
+        <table class="table chessboard text-center">
+          <% for j in 1..8 %>
+            <tr class="row">
+              <% row = 9-j %>
+              <%= content_tag(:td, row, class: 'coordinate') %>
+              <% for col in 1..8 %>
+                <% pieces_in_square = pieces.where(column: col, row: row) %>
+                <% piece_in_square = pieces_in_square[0] %>
 
-            <% if pieces_selected.empty? %>
-              <% if piece_in_square.blank? ||
-                 (piece_in_square.is_black && @game.black_player != current_player) ||
-                 (!piece_in_square.is_black && @game.white_player != current_player) %>
-                <%= content_tag(:div, raw(select_html_symbol(piece_in_square)),
-                                class: square_color(row, col)) %>
-              <% else %>
-                <%= link_to piece_path(piece_in_square) do %>
-                  <%= content_tag(:div, raw(select_html_symbol(piece_in_square)),
-                                  class: square_color(row, col)) %>
+                <% if piece_in_square.blank? %>
+                  <%= content_tag(:td, '', class: square_color(row, col)) %>
+                <% else %>
+                  <%=
+                    content_tag(
+                      :td,
+                      content_tag(:div, raw(select_html_symbol(piece_in_square))),
+                      class: square_color(row, col)
+                    )
+                  %>
                 <% end %>
               <% end %>
-            <% else %>
-              <% piece_selected = pieces_selected[0] %>
-              <%= link_to piece_path(id: piece_selected.id, column: col, row: row), method: :put do %>
-              <% if piece_in_square.blank? %>
-                <%= content_tag(:div, "", class: square_color(row, col)) %>
-              <% else %>
-                <%= content_tag(:div,
-                                piece_in_square.is_selected ?
-                                content_tag(:u, raw(select_html_symbol(piece_in_square))) :
-                                raw(select_html_symbol(piece_in_square)),
-                                class: square_color(row, col)) %>
-              <% end %>
-            <% end %>
-
-            <% end %>
+            </tr>
           <% end %>
-        <% end %>
-      </div>
-
-      <div class="bottom">
-        <% for col in 'a'..'h' %>
-          <%= content_tag(:div, col, class: 'col')%>
-        <% end %>
+          <tr class="row">
+            <%= content_tag(:td, '', class: 'coordinate') %>
+            <% for col in 'a'..'h' %>
+              <%= content_tag(:td, col, class: 'coordinate') %>
+            <% end %>
+          </tr>
+        </table>
       </div>
     </div>
   </body>
