--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,24 +7,16 @@
   <body>
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <div class="col-xs-10">
-        <% pieces = @game.pieces %>
         <table class="table chessboard text-center">
           <% 8.downto(1).each do |row| %>
             <tr id="row-<%= row %>" class="row">
               <td class="coordinate"><%= row %></td>
               <% 1.upto(8).each do |col| %>
-                <% piece_in_square = pieces.find_by(column: col, row: row) %>
-                <% if piece_in_square.blank? %>
-                  <%= content_tag(:td, '', class: square_color(row, col), id: "square-#{row}-#{col}") %>
+                <% piece = @game.pieces.find_by(column: col, row: row) %>
+                <% unless piece %>
+                  <%= render_empty_square(row, col) %>
                 <% else %>
-                  <%=
-                    content_tag(
-                      :td,
-                      content_tag(:div, raw(select_html_symbol(piece_in_square))),
-                      class: square_color(row, col),
-                      id: "square-#{row}-#{col}"
-                    )
-                  %>
+                  <%= render_piece_in_square(row, col, piece) %>
                 <% end %>
               <% end %>
             </tr>
