--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -29,6 +29,12 @@
             <% end %>
           </tr>
         </table>
+
+        <div>
+          <%= form_tag reset_game_path, method: :post do %>
+            <%= submit_tag 'Reset Game' %>
+          <% end %>
+        </div>
       </div>
     </div>
   </body>
@@ -75,12 +81,11 @@ $(function() {
   var game_id = $('.chessboard').attr('game_id')
   console.log('game_channel_' + game_id)
   var channel = pusher.subscribe('game_channel_' + game_id);
-  channel.bind('move', function(data) {
+
+  channel.bind('normal', function(data) {
     console.log(data);
-    var old_square_id = '#square-' + data.old_row + '-' + data.old_column;
-    var new_square_id = '#square-' + data.new_row + '-' + data.new_column;
-    var piece_id = '#piece-' + data.piece_id;
-    var old_square_div = $(old_square_id);
+    var new_square_id = '#square-' + data.piece.end_row + '-' + data.piece.end_column;
+    var piece_id = '#piece-' + data.piece.id;
     var new_square_div = $(new_square_id);
     var piece_div = $(piece_id);
 
@@ -92,5 +97,21 @@ $(function() {
     new_square_div.append(piece_div);
   });
 
+  channel.bind('castling', function(data) {
+    console.log(data);
+    var new_square_id = '#square-' + data.king.end_row + '-' + data.king.end_column;
+    var king_id = '#piece-' + data.king.id;
+    var new_square_div = $(new_square_id);
+    var king_div = $(king_id);
+    new_square_div.append(king_div);
+    new_square_div.children().show('slow');
+
+    new_square_id = '#square-' + data.rook.end_row + '-' + data.rook.end_column;
+    var rook_id = '#piece-' + data.rook.id;
+    new_square_div = $(new_square_id);
+    var rook_div = $(rook_id);
+    new_square_div.append(rook_div);
+    new_square_div.children().show('slow');
+  });
 });
 </script>
