Add undo move button

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -93,7 +93,7 @@ $(function() {
     var piece_div = $(piece_id);
 
     if (new_square_div.text().length != 0) {
-      new_square_div.children().hide('slow');
+      new_square_div.children().hide();
       new_square_div.empty();
     }
     // and add the piece in
