--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -51,6 +51,7 @@ $(function() {
   $('.contains-piece').draggable();
 
   // handle the action of dropping a piece into a square
+  var current_player_id = $('.chessboard').attr('current_player_id')
   $('.square').droppable({
     drop: function(event, ui){
       // get selected piece's and square's attributes
@@ -60,7 +61,6 @@ $(function() {
       var piece_info = piece_id.split('-');
       var square_id = square_div.attr('id');
       var square_info = square_id.split('-');
-      var current_player_id = $('.chessboard').attr('current_player_id')
 
       // try update the piece to the new location
       $.post("/pieces/" + piece_info[1], {
@@ -111,7 +111,11 @@ $(function() {
   });
 
   channel.bind('refresh', function(data) {
-    location.reload()
+    location.reload();
+  });
+
+  channel.bind('alert-' + current_player_id, function(message) {
+    alert(message);
   });
 });
 </script>
